--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -114,6 +114,342 @@ body {
 
 /* === Layout === */
 /* === Header section styles === */
+.header {
+  padding-top: 46px;
+  padding-bottom: 46px;
+  height: 230px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 41px;
+    padding-bottom: 41px;
+  }
+}
+
+.header-container_home {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-main/mobile.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-main/mobile.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192 dpi), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 2dppx) {
+  .header-container_home {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-main/mobile@2x.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-main/mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container_home {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-main/tablet.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-main/tablet.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192 dpi), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .header-container_home {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-main/tablet@2x.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-main/tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header-container_home {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-main/desctop.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-main/desctop.jpg");
+  }
+}
+
+@media screen and (min-width: 1024px) and (min-device-pixel-ratio: 2), screen and (min-width: 1024px) and (min-resolution: 192 dpi), screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1024px) and (min-resolution: 2dppx) {
+  .header-container_home {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-main/desctop@2x.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-main/desctop@2x.jpg");
+  }
+}
+
+.header-container_library {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-library/mobile.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-library/mobile.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192 dpi), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 2dppx) {
+  .header-container_library {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-library/mobile@2x.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-library/mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container_library {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-library/tablet.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-library/tablet.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192 dpi), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .header-container_library {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-library/tablet@2x.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-library/tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header-container_library {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-library/desctop.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-library/desctop.jpg");
+  }
+}
+
+@media screen and (min-width: 1024px) and (min-device-pixel-ratio: 2), screen and (min-width: 1024px) and (min-resolution: 192 dpi), screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1024px) and (min-resolution: 2dppx) {
+  .header-container_library {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("../images/bg-images-library/desctop@2x.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("../images/bg-images-library/desctop@2x.jpg");
+  }
+}
+
+.logo-icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--header-logo-svg-fill);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.logo-icon:hover .logo-icon:focus {
+  fill: var(--secondary-active-color);
+}
+
+@media screen and (min-width: 768px) {
+  .logo-icon {
+    margin-right: 10px;
+  }
+}
+
+.search-icon {
+  width: 12px;
+  height: 12px;
+}
+
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 37px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo-text {
+  font-size: var(--logo-text-size-and-modal-header);
+  line-height: 1.16px;
+  color: var(--main-white-color);
+}
+
+@media screen and (max-width: 767px) {
+  .logo-text {
+    display: none;
+  }
+}
+
+.navigation-menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navigation-menu-list :not(:first-child) {
+  margin-left: 39px;
+}
+
+.navigation-menu-link {
+  position: relative;
+  font-size: var(--main-text-size);
+  line-height: 1.16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  text-transform: var(--text-big-letters);
+  color: var(--main-white-color);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -9px;
+  width: 100%;
+  height: 3px;
+  background: var(--secondary-active-color);
+}
+
+.navigation-menu-link:hover,
+.navigation-menu-link:focus {
+  background-color: var(--secondary-active-color);
+}
+
+.search {
+  max-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.search-control {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--background-transparent-color);
+  border: none;
+  width: 280px;
+  height: 20px;
+  outline: none;
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
+  line-height: 1.14;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  padding-right: 20px;
+  color: var(--main-white-color);
+  border-bottom: 0.5px solid var(--main-white-color);
+}
+
+@media screen and (min-width: 768px) {
+  .search-control {
+    width: 336px;
+  }
+}
+
+.search-control::-webkit-input-placeholder {
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
+  line-height: 1.17;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  color: var(--main-white-color);
+}
+
+.search-control:-ms-input-placeholder {
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
+  line-height: 1.17;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  color: var(--main-white-color);
+}
+
+.search-control::-ms-input-placeholder {
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
+  line-height: 1.17;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  color: var(--main-white-color);
+}
+
+.search-control::placeholder {
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
+  line-height: 1.17;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--main-white-color);
+}
+
+.search-form {
+  position: relative;
+}
+
+.search__btn {
+  position: absolute;
+  top: -3px;
+  right: 0;
+  padding: 1px 5px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+}
+
+.button:not(:last-child) {
+  margin-right: 18px;
+}
+
+.warning {
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
+  line-height: 1.14;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--header-search-unsuccessful-color);
+  position: absolute;
+  margin-top: 22px;
+  width: 280px;
+}
+
+@media screen and (min-width: 768px) {
+  .warning {
+    width: 390px;
+  }
+}
+
 /* === Header library section styles === */
 /* === Footer section styles === */
 .footer-container {
@@ -257,6 +593,322 @@ body {
     font-size: 16px;
     line-height: 19px;
   }
+}
+
+/*modal-card*/
+.overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 95%;
+  width: 100%;
+  max-width: 280px;
+  max-height: 958px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 41px;
+  padding-top: 48px;
+  background-color: var(--main-white-color);
+  background-color: #eea2cc;
+  overflow-y: scroll;
+}
+
+@media screen and (min-width: 480px) {
+  .modal-wrapper {
+    max-width: 562px;
+    max-height: 618px;
+    padding-left: 28px;
+    padding-right: 30px;
+    padding-bottom: 7px;
+    padding-top: 75px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal-wrapper {
+    max-width: 882px;
+    max-height: 568px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal-right-part {
+    padding-left: 30px;
+  }
+}
+
+.img-modal {
+  width: 240px;
+  height: 356px;
+  left: 101px;
+  top: 150px;
+  border-radius: var(--border-radius);
+}
+
+@media screen and (min-width: 480px) {
+  .img-modal {
+    width: 264px;
+    height: 373px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .img-modal {
+    width: 396px;
+    height: 478px;
+  }
+}
+
+.modal-main-title {
+  width: 266px;
+  height: 21px;
+  font-size: 20px;
+  line-height: 1.15;
+  margin-bottom: 20px;
+  color: var(--main-black-color);
+}
+
+@media screen and (min-width: 768px) {
+  .modal-main-title {
+    height: 31px;
+    font-size: 30px;
+    line-height: 1.16;
+  }
+}
+
+.modal-secondary-title {
+  width: 39px;
+  height: 16px;
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  color: var(--main-black-color);
+  margin-bottom: 10px;
+}
+
+.modal-film-description {
+  width: 236px;
+  font-weight: var(--text-bold);
+  font-size: 12px;
+  line-height: 1.66;
+  color: var(--main-black-color);
+}
+
+@media screen and (min-width: 480px) {
+  .modal-film-description {
+    width: 262px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal-film-description {
+    height: 186px;
+    width: 396px;
+  }
+}
+
+.modal-lists-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.modal-item-position {
+  height: 16px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--modal-category-and-slash-color);
+}
+
+.modal-item-position:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.modal-list-denominations {
+  height: 16px;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--main-black-color);
+  margin-right: 39px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-list-denominations {
+    margin-right: 83px;
+  }
+}
+
+.modal-item-description {
+  height: 16px;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+.modal-item-description:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.modal-item-description-rating {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 9px;
+  padding-right: 9px;
+  width: 36px;
+  background: var(--main-active-color);
+  border-radius: var(--border-radius);
+  text-align: center;
+  color: var(--main-white-color);
+  text-transform: uppercase;
+}
+
+.modal-item-description-views {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 4px;
+  padding-right: 4px;
+  width: 36px;
+  text-align: center;
+  background: var(--for-pagination-footer-votes-background-color);
+  border-radius: var(--border-radius);
+  text-transform: uppercase;
+}
+
+.modal-item-span {
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+.item-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-list-genres {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.modal-item-genres:not(:last-child) {
+  margin-right: 10px;
+}
+
+.modal-wrapper-btn {
+  position: relative;
+  margin-top: 21px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-btn {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  text-align: center;
+  color: var(--main-white-color);
+  width: 113px;
+  height: 44px;
+  border-radius: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: none;
+  text-transform: var(--text-big-letters);
+}
+
+@media screen and (min-width: 480px) {
+  .modal-btn {
+    width: 125px;
+    padding-top: 14px;
+    padding-bottom: 12px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal-btn {
+    width: 136px;
+  }
+}
+
+.modal-btn-watched {
+  color: var(--main-black-color);
+  background-color: var(--main-white-color);
+  border: 1px solid var(--main-black-color);
+  margin-right: 15px;
+}
+
+.modal-btn-watched:hover,
+.modal-btn-watched:focus {
+  color: var(--main-white-color);
+  background-color: var(--main-active-color);
+  border: none;
+}
+
+.modal-btn-queue {
+  color: var(--main-black-color);
+  background-color: var(--main-white-color);
+  border: 1px solid var(--main-black-color);
+}
+
+.modal-btn-queue:hover,
+.modal-btn-queue:focus {
+  color: var(--main-white-color);
+  background-color: var(--main-active-color);
+  border: none;
+}
+
+.modal-btn-hidden {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--main-white-color);
+  background-color: var(--main-active-color);
+  border: none;
+}
+
+.modal-btn-hidden:hover,
+.modal-btn-hidden:focus {
+  color: var(--main-black-color);
+  background-color: var(--main-white-color);
+  border: 1px solid var(--main-black-color);
+}
+
+.modal-btn-remove-watched {
+  margin-right: 15px;
 }
 
 /* === Gallery section styles === */
@@ -523,6 +1175,41 @@ body {
 .modal-close-btn:hover .modal-close-btn__icon,
 .modal-close-btn:focus .modal-close-btn__icon {
   fill: var(--main-white-color);
+}
+
+/* === Button === */
+.button {
+  width: 130px;
+  height: 44px;
+  -webkit-filter: drop-shadow(0px 8px 43px rgba(255, 107, 1, 0.6));
+          filter: drop-shadow(0px 8px 43px rgba(255, 107, 1, 0.6));
+  cursor: pointer;
+  font-size: var(--main-text-size);
+  line-height: 1.14;
+  text-transform: var(--text-big-letters);
+  background-color: var(--background-transparent-color);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--main-white-color);
+  outline: none;
+  color: var(--main-white-color);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:focus, .button:hover {
+  background-color: var(--secondary-active-color);
+  border-color: var(--secondary-active-color);
+}
+
+@media screen and (min-width: 768px) {
+  .button {
+    width: 136px;
+  }
+}
+
+.active-btn {
+  background-color: var(--main-active-color);
+  border-color: var(--main-active-color);
 }
 
 .footer-container {
