--- a/src/templates/movieCardTemplate.hbs
+++ b/src/templates/movieCardTemplate.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li class="gallery-items" data-index="{{id}}">
       <div class="moviе-item__img">
-            <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="moviе poster: {{title}}">
+            <img class="js-card-img" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="moviе poster: {{title}}">
       </div>
       <div class="moviе-stats">
             {{#if title}}
