--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -5,5 +5,6 @@
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
     </button>
+    <div class="card-container"></div>
   </div>
 </div>
