--- a/src/sass/layout/_gallery-cards.scss
+++ b/src/sass/layout/_gallery-cards.scss
@@ -21,6 +21,7 @@
   flex-basis: calc(100% / 1 - 30px);
   margin-left: 30px;
   margin-bottom: 30px;
+  border-radius: 5px;
 
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     flex-basis: calc(100% / 2 - 30px);
@@ -33,6 +34,7 @@
 
   &:hover {
     transform: scale(1.03);
-    cursor: zoom-in;
+    box-shadow: 10px 5px 5px var(--header-logo-svg-fill);
+    cursor: pointer;
   }
 }
