--- a/src/sass/layout/_gallery-cards.scss
+++ b/src/sass/layout/_gallery-cards.scss
@@ -22,6 +22,7 @@
   margin-left: 30px;
   margin-bottom: 30px;
   border-radius: 5px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     flex-basis: calc(100% / 2 - 30px);
