--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -291,14 +291,16 @@
   margin-right: 15px;
 }
 
-//////overlay/////@at-root
+//////overlay/////
 .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  width: inherit;
-  height: inherit;
-  background: rgba(238, 108, 22, 0.699);
+  width: 100%;
+  height: 100%;
+  // width: inherit;
+  // height: inherit;
+  background: rgba(97, 70, 52, 0.37);
 
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -306,4 +308,22 @@
 .modal-wrapper-link:hover .overlay,
 .modal-wrapper-link:focus .overlay {
   transform: translate(0);
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-img-play {
+  width: 150px;
+  height: 150px;
+  scale: 1;
+  transition: scale 500ms linear, transform 500ms ease-in-out;
+}
+
+.modal-img-play:hover,
+.modal-img-play:focus {
+  transform: scale(1.15);
 }
