--- a/src/templates/aboutMovieTemplates.hbs
+++ b/src/templates/aboutMovieTemplates.hbs
@@ -3,7 +3,16 @@
 <div class="wrapper-img">
     <img class="img-modal" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="cover film">
     <div class="overlay">
-        {{!-- <img src="../images/play.png" alt=""> --}}
+
+        {{!-- <svg class="modal-img-play" fill="red" width="12" height="16">
+            <use width="12" height="16" href="./play-svg.svg"></use>
+        </svg> --}}
+        <img class="modal-img-play" src="./play-orange.png" alt="icon play">
+                {{!-- <img class="modal-img-play" src="./music-play.png" alt="icon play"> --}}
+
+        {{!-- <img class="modal-img-play" src="./play-border.png" alt="icon play"> --}}
+
+
     </div>
 </div>
 </a>
